Fix: Haskell install

--- a/haskell/Makefile
+++ b/haskell/Makefile
@@ -10,7 +10,6 @@ VERSION := 8.8.3
 #
 # build package
 #
-# all: download extract analyze plist build
 all: download extract package
 
 home:
@@ -22,20 +21,18 @@ clean:
 download: clean
 	mkdir -p stage
 	curl -o stage/haskell.tar.gz -L https://downloads.haskell.org/ghc/${VERSION}/ghc-${VERSION}-x86_64-apple-darwin.tar.xz
-	# curl -o stage/haskell.tar.gz -L "https://github.com/commercialhaskell/stack/releases/download/v${VERSION}/stack-${VERSION}-osx-x86_64.tar.gz"
  
 extract:
 	tar xJvf stage/haskell.tar.gz -C stage
-	cd stage/ghc-${VERSION}; ./configure --prefix=${PWD}/stage/build; make install
+	cd stage/ghc-${VERSION}; ./configure --prefix=/usr/local/haskell; make install DESTDIR=${PWD}/stage
 
 package:
-	pkgbuild --version $(VERSION) --identifier $(IDENTIFIER) --scripts scripts --install-location /usr/local/haskell --root stage/build stage/haskell.pkg
+	pkgbuild --version $(VERSION) --identifier $(IDENTIFIER) --scripts scripts --install-location /usr/local --root stage/usr/local stage/haskell.pkg
 
 install:
 	open stage/haskell.pkg
 
 uninstall:
-	sudo rm -rf /etc/paths.d/haskell
-	sudo rm -f /usr/local/haskell
+	sudo rm -rf /usr/local/haskell
 	sudo rm -rf /etc/paths.d/haskell
 	sudo pkgutil --forget $(IDENTIFIER)
