Fix: flutter fixes

--- a/flutter/Makefile
+++ b/flutter/Makefile
@@ -17,8 +17,8 @@ USERNAME ?= ""
 #
 # build package
 #
-# all: download extract analyze plist build
-all: download extract package
+# all: download extract codesign package pkgsign install
+all: extract package pkgsign install
 
 android:
 	open "https://developer.android.com/studio"
@@ -48,10 +48,10 @@ extract:
 	chmod -R 777 stage/flutter/.pub-cache
 
 codesign:
-	codesign -f -o runtime --timestamp --sign "Developer ID Application: ${DEVNAME} (${DEVID})" stage/flutter/bin/cache/dart-sdk/bin/dart stage/flutter/bin/cache/flutter_tools.snapshot
+	codesign -f -o runtime --timestamp --sign "Developer ID Application: ${DEVNAME} (${DEVID})" stage/flutter/bin/cache/dart-sdk/bin/dart
 
 package:
-	sed 's/{IDENTIFIER}/${IDENTIFIER}/' scripts/uninstall.sh > stage/flutter/uninstall.sh
+	sed 's/{IDENTIFIER}/${IDENTIFIER}/' scripts/uninstall.sh > stage/flutter/uninstall.sh; chmod 777 stage/flutter/uninstall.sh
 	pkgbuild --version $(VERSION) --identifier $(IDENTIFIER) --scripts scripts --install-location /usr/local/flutter --root stage/flutter stage/${PKGNAME}-${VERSION}.pkg
 
 pkgsign:
