--- a/inetutils/Makefile
+++ b/inetutils/Makefile
@@ -31,7 +31,7 @@ extract:
 	mkdir stage/bin
 	mv stage/inetutils-$(VERSION)/telnet/telnet stage/bin
 	mv stage/inetutils-$(VERSION)/ftp/ftp stage/bin
-	chmod +rxrxrx stage/bin/*
+	chmod 755 stage/bin/*
 
 package:
 	pkgbuild --version $(VERSION) --identifier $(IDENTIFIER) --scripts scripts --install-location /usr/local/bin --root stage/bin stage/inetutils.pkg
